feat(all): The basic project is completed